# Projet_BlackJack_MICLEA_Christian

./: .gitignore  README.md  pyproject.toml  students.txt
poker/: __init__.py  card.py  evaluate.py  hands.py
tests/: test_best_of_seven.py  test_card.py  test_evaluate.py  test_evaluator.py
